# SnowPy

./: pyproject.toml  readme.md
Setup/: Poetry_Configure.bat
Upload/csv/: smple.csv
bat_files/: run_load.bat
pandas_snowpipe/: PipeClass.py  test.py
shell/: run_load.sh
tests/: test_pandas_snowpipe.py
